# py_aduc_upload

./: .flake8  .pylintrc  README.md  UART.hex  __init__.py  __main__.py  _winDevices.py  aduc_upload.py  make.bat  octopus.bat  octopus_ui.bat  octopus_ui.py  port_in_use.py  port_picker_ui.py  port_validation.py  powershellColonObjects.py  py_aduc_upload.bat  py_aduc_upload_setup.nsi  pyproject.toml  serialLike.py  test.py  update_pound_defines.py  winDevices.py
tests/: test.py
